Use maxWait Duration on pool2, use non deprecated valueOf methods in Numbers, add warning and adjust test settings, if borrowObject is false and maxWaitInMillis is set, add log4j2 test logger configuration.